--- a/About-You/Main Files (Free to change)/Resources/Xibs/ProfileView.xib
+++ b/About-You/Main Files (Free to change)/Resources/Xibs/ProfileView.xib
@@ -11,16 +11,16 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ProfileView" customModule="About_You" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="364" height="80"/>
+            <rect key="frame" x="0.0" y="0.0" width="441" height="131"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Bnw-4c-yKl">
-                    <rect key="frame" x="15" y="10" width="64" height="60.666666666666671"/>
+                    <rect key="frame" x="15" y="9.9999999999999929" width="115" height="111.66666666666666"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <gestureRecognizers/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="Bnw-4c-yKl" secondAttribute="height" multiplier="1:1" id="9FO-bn-M7q"/>
-                        <constraint firstAttribute="height" constant="64" id="pjx-DK-taU"/>
+                        <constraint firstAttribute="height" constant="115" id="pjx-DK-taU"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -32,38 +32,47 @@
                     </connections>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ieg-Mo-JjB">
-                    <rect key="frame" x="94" y="15" width="255" height="21"/>
+                    <rect key="frame" x="145" y="15" width="281" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eO4-jL-c7A">
-                    <rect key="frame" x="94" y="36" width="255" height="21"/>
+                    <rect key="frame" x="145" y="36" width="281" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hSq-QN-zMa">
+                    <rect key="frame" x="145" y="72" width="281" height="51"/>
+                </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="hSq-QN-zMa" secondAttribute="bottom" constant="8" id="5Tb-4A-68t"/>
                 <constraint firstItem="Ieg-Mo-JjB" firstAttribute="leading" secondItem="Bnw-4c-yKl" secondAttribute="trailing" constant="15" id="D87-fL-wdj"/>
                 <constraint firstItem="Bnw-4c-yKl" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="HQZ-QT-eIE"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="eO4-jL-c7A" secondAttribute="trailing" constant="15" id="J9n-SP-0En"/>
                 <constraint firstItem="eO4-jL-c7A" firstAttribute="leading" secondItem="Bnw-4c-yKl" secondAttribute="trailing" constant="15" id="K96-RF-xqe"/>
                 <constraint firstAttribute="bottom" secondItem="Bnw-4c-yKl" secondAttribute="bottom" constant="8" id="Lly-li-JsB"/>
+                <constraint firstItem="hSq-QN-zMa" firstAttribute="top" secondItem="eO4-jL-c7A" secondAttribute="bottom" constant="15" id="Uff-re-7Vx"/>
                 <constraint firstItem="Ieg-Mo-JjB" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="WNC-GJ-SiN"/>
+                <constraint firstItem="hSq-QN-zMa" firstAttribute="leading" secondItem="Bnw-4c-yKl" secondAttribute="trailing" constant="15" id="YIK-DO-zbP"/>
                 <constraint firstItem="Bnw-4c-yKl" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="15" id="edf-pO-WhD"/>
                 <constraint firstAttribute="trailing" secondItem="Ieg-Mo-JjB" secondAttribute="trailing" constant="15" id="fXZ-lf-XLw"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="hSq-QN-zMa" secondAttribute="trailing" constant="15" id="hH7-ns-y4o"/>
                 <constraint firstItem="eO4-jL-c7A" firstAttribute="top" secondItem="Ieg-Mo-JjB" secondAttribute="bottom" id="zD4-vw-T6B"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="imageView" destination="Bnw-4c-yKl" id="0wK-K9-LkL"/>
+                <outlet property="imageViewHeightConstraint" destination="pjx-DK-taU" id="PWJ-p9-pY7"/>
                 <outlet property="nameLabel" destination="Ieg-Mo-JjB" id="uFW-on-orH"/>
                 <outlet property="roleLabel" destination="eO4-jL-c7A" id="yRC-ag-XHk"/>
+                <outlet property="stackView" destination="hSq-QN-zMa" id="i1a-kn-S4G"/>
             </connections>
-            <point key="canvasLocation" x="206.10687022900763" y="-26.056338028169016"/>
+            <point key="canvasLocation" x="264.8854961832061" y="-3.8732394366197185"/>
         </view>
         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="qkO-ST-I14">
             <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
